create chat-space front

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,4 @@
 @import "reset";
-// @import "index";
 @import "variable";
 @import "font-awesome";
 @import "moduls/right-header";
@@ -7,3 +6,7 @@
 @import "moduls/right-footer";
 @import "moduls/left-header";
 @import "moduls/left-main";
+@import "modules/user";
+@import "modules/flash";
+@import "config/colors";
+@import "modules/group";
