--- a/app/views/messages/_left-header.html.haml
+++ b/app/views/messages/_left-header.html.haml
@@ -6,11 +6,8 @@
 
       %ul.side-header__iconbox__menu
         %li.side-header__box__menu__new-group
-          %a{:href => "/groups/new"}
+          = link_to '#' do
             %i.fa.fa-edit
         %li.side-header__box__menu__edit-user
-          %a{:href => "/users/617/edit"}
+          = link_to '#' do
             %i.fa.fa-cog
-  
-
- 
