--- a/app/views/messages/_left-main.html.haml
+++ b/app/views/messages/_left-main.html.haml
@@ -1,10 +1,10 @@
  
 .groups
-  %a{:href => "/groups/1237/messages"}
+  = link_to '#' do
     .group
       .group__group-name 宣戦布告
       .group__latest-message テスト
-  %a{:href => "/groups/1132/messages"}
+  = link_to '#' do
     .group
       .group__group-name バスケ部
       .group__latest-message こんにちは
