--- a/app/views/messages/_right-main.html.haml
+++ b/app/views/messages/_right-main.html.haml
@@ -1,5 +1,5 @@
 .messages
-  .message{"data-message_id" => "2348"}
+  .message{"data-message_id":"2348"}
     .message__upper-info
       .message__upper-info__talker yuri
       .message__upper-info__date 2019/09/11(Wed) 19:12:36
