--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,7 +6,6 @@
 @import "moduls/right-footer";
 @import "moduls/left-header";
 @import "moduls/left-main";
-@import "modules/user";
-@import "modules/flash";
-@import "config/colors";
-@import "modules/group";
+@import "moduls/user";
+@import "moduls/flash";
+@import "moduls/group";
