--- a/app/assets/stylesheets/moduls/_flash.scss
+++ b/app/assets/stylesheets/moduls/_flash.scss
@@ -1,13 +1,13 @@
 .notification {
   .notice {
-    background-color: $light_blue;
-    color: $white;
+    // background-color: $light_blue;
+    // color: $white;
     text-align: center;
   }
 
   .alert {
-    background-color: $alert_orange;
-    color: $white;
+    // background-color: $alert_orange;
+    // color: $white;
     text-align: center;
   }
 }
