--- a/app/assets/stylesheets/moduls/_right-footer.scss
+++ b/app/assets/stylesheets/moduls/_right-footer.scss
@@ -7,14 +7,14 @@
     .input-box {
       position: relative;
       width: 100%;
-      .input-box__text {
+      &__text {
         height: 50px;
         width: 100%;
         padding: 0 40px 0 10px;
         color: #434a54;
         border-style: none;
       }
-      .input-box__image {
+      &__image {
         font-size: 1.3rem;
         position: absolute;
         top: 10px;
