--- a/app/assets/stylesheets/moduls/_right-footer.scss
+++ b/app/assets/stylesheets/moduls/_right-footer.scss
@@ -2,36 +2,37 @@
   height: 90px;
   padding: 20px 40px;
   background-color: #ddd;
-  .new_message{
+  .new_comment{
     display: flex;
-    .input-box {
-      position: relative;
+    height: 50px;
+    width: 100%;
+  }
+  .input-box {
+    position: relative;
+    &__text {
       width: 100%;
-      &__text {
-        height: 50px;
-        width: 100%;
-        padding: 0 40px 0 10px;
-        color: #434a54;
-        border-style: none;
-      }
-      &__image {
-        font-size: 1.3rem;
-        position: absolute;
-        top: 10px;
-        right: 10px;
-        cursor: pointer;
-      }
+      padding: 0 40px 0 10px;
+      color: #434a54;
+      border-style: none;
     }
-    .submit-btn {
-      width: 100px;
-      height: 50px;
-      padding: 0 30px;
-      margin-left: 15px;
-      background-color: #38aef0;
-      color: white;
+    &__image {
+      font-size: 1.3rem;
+      position: absolute;
+      top: 10px;
+      right: 10px;
       cursor: pointer;
     }
   }
+  .submit-btn {
+    width: 100px;
+    height: 50px;
+    padding: 0 30px;
+    margin-left: 15px;
+    background-color: #38aef0;
+    color: white;
+    cursor: pointer;
+  }
+  
   .input-box__image__file{
     display: none;
   } 
