--- a/app/assets/stylesheets/moduls/_right-main.scss
+++ b/app/assets/stylesheets/moduls/_right-main.scss
@@ -1,32 +1,31 @@
-.messages {
+.comments {
   height: calc(100vh - 190px);
   padding: 46px 40px;
   background-color: #fafafa;
   overflow: scroll;
 
-  .message {
+  .comment {
     padding-bottom: 40px;
-
+    
     &__upper-info {
-      display: flex;
+      
       margin-bottom: 10px;
       
-      &__talker {
+    &__talker {
         color: #54434d;
         font-size: 16px;
-        font-weight: bold;
-      } 
-      &__date {
+        font-weight: bold;     
+    } 
+    &__date {
         color: #999999;
         font-size: 12px;
-        margin-left: 10px;
-      } 
+        margin-left: 20px;   
+    } 
+    // &__text {
+    //   color: #434a54;
+    //   font-size: 14px;
+    //   margin-bottom: 10px;
+    // }    
     }  
   }  
-   
-    &__text {
-      color: #434a54;
-      font-size: 14px;
-      margin-bottom: 10px;
-    }    
 }
