--- a/app/views/comments/_left-main.html.haml
+++ b/app/views/comments/_left-main.html.haml
@@ -1,9 +1,17 @@
-.groups
-  = link_to '#' do
-    .group
-      .group__group-name 宣戦布告
-      .group__latest-message テスト
-  = link_to '#' do
-    .group
-      .group__group-name バスケ部
-      .group__latest-message こんにちは
+-# .groups
+-#   = link_to group_comments_path do
+-#     .group
+-#       .group__group-name 宣戦布告
+-#       .group__latest-commnet テスト
+-#   = link_to group_comments_path do
+-#     .group
+-#       .group__group-name バスケ部
+-#       .group__latest-comment こんにちは
+-# .groups
+-#     .group
+-#       - current_user.groups.each do |group|
+-#         = link_to group_comments_path(group) do
+-#           .group__name
+-#             = group.name
+-#           .group__message
+-#             = group.show_last_comment
