--- a/app/views/comments/_right-footer.html.haml
+++ b/app/views/comments/_right-footer.html.haml
@@ -1,13 +1,21 @@
-.form
-  %form#new_message.new_message{"accept-charset":"UTF-8", action:"/groups/1132/messages", enctype:"multipart/form-data", method:"post"}
-    %input{name:"utf8", type:"hidden", value:"✓"}/
-    %input{name:"authenticity_token", type:"hidden", value:"1icmZRHfmngO8TcwCyFXVRI+qhjg3dcabbyEoBNxtS24GcqZvqTi3k2wcG5Pokod2xRO4nFB9Ek5Nzf1NYstaQ=="}/
+-# .form
+-#   %form#new_message.new_message{"accept-charset":"UTF-8", action:"/groups/1132/messages", enctype:"multipart/form-data", method:"post"}
+-#     %input{name:"utf8", type:"hidden", value:"✓"}/
+-#     %input{name:"authenticity_token", type:"hidden", value:"1icmZRHfmngO8TcwCyFXVRI+qhjg3dcabbyEoBNxtS24GcqZvqTi3k2wcG5Pokod2xRO4nFB9Ek5Nzf1NYstaQ=="}/
     
-    .input-box
-      %input#message_content.input-box__text{name:"message[content]", placeholder:"type a message", type:"text"}/
-      %label.input-box__image
-        %i.fa.fa-image
-        %input#message_image.input-box__image__file{name:"message[image]", type:"file", id:"image"}/
+-#     .input-box
+-#       %input#message_content.input-box__text{name:"message[content]", placeholder:"type a message", type:"text"}/
+-#       %label.input-box__image
+-#         %i.fa.fa-image
+-#         %input#message_image.input-box__image__file{name:"message[image]", type:"file", id:"image"}/
         
-    %input.submit-btn{"data-disable-with":"Send", name:"commit", type:"submit", value:"Send"}/
+-#     %input.submit-btn{"data-disable-with":"Send", name:"commit", type:"submit", value:"Send"}/
 
+.form
+  = form_for [@group, @comment] do |f|
+    = f.text_field :name, class: 'new_comment', placeholder: 'type a comment', id: 'new_comment'
+    .input-box
+      = f.label :image, class: 'input-box__image' do
+        = fa_icon 'picture-o', class: 'icon'
+        = f.file_field :image, class: 'input-box__image__file hidden'
+    = f.submit 'Send', class: 'submit-btn form__submit'
