--- a/app/views/comments/_right-header.html.haml
+++ b/app/views/comments/_right-header.html.haml
@@ -1,10 +1,9 @@
 .main-header
   .main-header__left-box
-    %h2.main-header__left-box__current-group{"data-group_id":"1132"}
-      バスケ部
+    %h2.main-header__left-box__current-group
+      =@group.name
     %ul.main-header__left-box__member-list
       Member：
-      %li.main-header__left-box__member-list__member 佐藤タケル
-      %li.main-header__left-box__member-list__member yuri
+      
   = link_to 'Edit' do
     .main-header__edit-btn Edit
