--- a/app/views/comments/_right-main.html.haml
+++ b/app/views/comments/_right-main.html.haml
@@ -1,6 +1,13 @@
-.messages
-  .message{"data-message_id":"2348"}
-    .message__upper-info
-      .message__upper-info__talker yuri
-      .message__upper-info__date 2019/09/11(Wed) 19:12:36
-    .message__text こんにちは
+.comments 
+  .comment
+    .comment__upper-info
+      = @comments.each do |comment|
+        .comment__upper-info__talker
+          = comment.user.name
+        .comment__upper-info__date 
+          = comment.created_at.strftime("%Y/%m/%d %H:%M")
+        .comment__text 
+        - if comment.name.present?
+          .lower-comment__content
+            = comment.name
+        = image_tag comment.image.url, class: 'lower-comment__image' if comment.image.present?  
