--- a/app/views/groups/edit.html.haml
+++ b/app/views/groups/edit.html.haml
@@ -1,5 +1,6 @@
 .chat-group-form
   %h1 チャットグループ編集
+  = render partial: 'form', locals: { group: @group }
   %form
     .chat-group-form__errors
       %h2
@@ -8,7 +9,7 @@
           %li エラーです
     .chat-group-form__field
       .chat-group-form__field--left
-        %label.chat-group-form__label{:for: "chat_group_name"} グループ名
+        %label.chat-group-form__label{for: "chat_group_name"} グループ名
       .chat-group-form__field--right
         %input#chat_group_name.chat-group-form__input{name: "chat_group[name]", placeholder: "グループ名を入力してください", type: "text"}/
     .chat-group-form__field
