--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -11,9 +11,10 @@
           = fa_icon 'cog', class: 'icon'
   .groups
     .group
-     - current_user.groups.each do |group|
-        = link_to '#' do
+      - current_user.groups.each do |group|
+        = link_to group_comments_path(group) do
           .group__name
             = group.name
           .group__message
-            メッセージはまだありません。      
+            = group.show_last_comment
+            
