--- a/app/assets/stylesheets/moduls/_left-header.scss
+++ b/app/assets/stylesheets/moduls/_left-header.scss
@@ -14,24 +14,19 @@
   display: flex;
   align-items: center;
   padding: 0 20px;
-  &__box{
-    justify-content: space-between;
-    width: 100%;
-    font-weight: bold;
-    list-style: none;
-    margin-left: 0.3rem;
-    color:white
-  }
+  justify-content: space-between;
+  width: 100%;
+  font-weight: bold;
+  list-style: none;
+  color:white;
+
   .fa {
     color: white;
   }
-  &__iconbox {
-    &__menu {
-      display: flex;
-      float: right;
-      li {
-        margin-left: 0.3rem;
-      }
+  &__lists {
+    display: flex;
+    li {
+      margin-left: 0.3rem;
     }
   }
 }
