--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -1,8 +1,8 @@
 .chat-side
   .side-header
-    %h3.header__name
+    %h3.side-header__name
       = current_user.name
-    %ul.header__lists
+    %ul.side-header__lists
       %li.list
         = link_to new_group_path do
           = fa_icon 'pencil-square-o', class: 'icon'
