--- a/app/views/comments/_right-main.html.haml
+++ b/app/views/comments/_right-main.html.haml
@@ -1,5 +1,5 @@
 .comments 
-  = @comments.each do |comment|
+  - @comments.each do |comment|
     .comment
       .comment__upper-info
         .comment__upper-info__talker
