--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -1,25 +1,45 @@
 = form_for group do |f|
   - if group.errors.any?
     .chat-group-form__errors
-      %h2= "#{group.errors.full_messages.count}件のエラーが発生しました。"
+      %h2= "#{group.errors.full_comments.count}件のエラーが発生しました。"
       %ul
-        - group.errors.full_messages.each do |message|
-          %li= message
+        - group.errors.full_comments.each do |comment|
+          %li= comment
+
   .chat-group-form__field
     .chat-group-form__field--left
       = f.label :name, class: 'chat-group-form__label'
     .chat-group-form__field--right
       = f.text_field :name, class: 'chat__group_name chat-group-form__input', placeholder: 'グループ名を入力してください'
+  
   .chat-group-form__field.clearfix
-    / この部分はインクリメンタルサーチ（ユーザー追加の非同期化のときに使用します
+    .chat-group-form__field--left 
+      = f.label :users, "チャットメンバーを追加", class: 'chat-group-form__label', for:'user-search-field'
+    .chat-group-form__field--right
+      .chat-group-form__search.clearfix
+        = f.text_field :users, id: 'user-search-field', class: 'chat-group-form__input', value: '', placeholder: '追加したいユーザー名を入力してください'
+      #user-search-result  
+     
+
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
-      %label.chat-group-form__label{:for => "chat_group_チャットメンバー"} チャットメンバー
+      = f.label :user_ids, "チャットメンバー", class: 'chat-group-form__label'
+
     .chat-group-form__field--right
-      / グループ作成機能の追加時はここにcollection_check_boxesの記述を入れてください
-      = f.collection_check_boxes :user_ids, User.all, :id, :name
-      / この部分はインクリメンタルサーチ（ユーザー追加の非同期化のときに使用します
-  .chat-group-form__field.clearfix
-    .chat-group-form__field--left
-    .chat-group-form__field--right
-      = f.submit class: 'chat-group-form__action-btn'
+      .chat-group-users.js-add-user
+        .chat-group-user.clearfix.js-chat-member{id: "#{current_user.id}"}
+          %input{name: 'group[user_ids][]', type: 'hidden', value: "#{current_user.id}"}
+          %p.chat-group-user__name
+            = current_user.name
+        - group.users.each do |group_user|
+          - if group_user != current_user
+            .chat-group-user.clearfix.js-chat-member{id: "#{group_user.id}"}
+              %input{name: 'group[user_ids][]', type: 'hidden', value: "#{group_user.id}"}
+              %p.chat-group-user__name
+                = group_user.name
+              %a.user-search-remove.chat-group-user__btn.chat-group-user__btn--remove.js-remove-btn
+                削除
+    .chat-group-form__field.clearfix
+      .chat-group-form__field--left
+      .chat-group-form__field--right
+        = f.submit class: 'chat-group-form__action-btn' 
