--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -20,25 +20,18 @@
         = f.text_field :users, id: 'user-search-field', class: 'chat-group-form__input', value: '', placeholder: '追加したいユーザー名を入力してください'
       #user-search-result  
      
-
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
       = f.label :user_ids, "チャットメンバー", class: 'chat-group-form__label'
 
     .chat-group-form__field--right
-      .chat-group-users.js-add-user
-        .chat-group-user.clearfix.js-chat-member{id: "#{current_user.id}"}
-          %input{name: 'group[user_ids][]', type: 'hidden', value: "#{current_user.id}"}
-          %p.chat-group-user__name
-            = current_user.name
-        - group.users.each do |group_user|
-          - if group_user != current_user
-            .chat-group-user.clearfix.js-chat-member{id: "#{group_user.id}"}
-              %input{name: 'group[user_ids][]', type: 'hidden', value: "#{group_user.id}"}
-              %p.chat-group-user__name
-                = group_user.name
-              %a.user-search-remove.chat-group-user__btn.chat-group-user__btn--remove.js-remove-btn
-                削除
+      #chat-group-users
+        - @group.users.each do |user|
+          #chat-group-user-8.chat-group-user.clearfix.js-chat-member
+            %input{name: 'group[user_ids][]', type: 'hidden', value: "#{ user.id }"}
+            %p.chat-group-user__name
+              = user.name
+            %p.user-search-remove.chat-group-user__btn.chat-group-user__btn--remove.js-remove-btn 削除
     .chat-group-form__field.clearfix
       .chat-group-form__field--left
       .chat-group-form__field--right
