--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -4,7 +4,7 @@
       = current_user.name
     %ul.side-header__lists
       %li.list
-        = link_to new_group_path do
+        = link_to new_group_path(current_user) do
           = fa_icon 'pencil-square-o', class: 'icon'
       %li.list
         = link_to edit_user_path(current_user) do
