--- a/app/views/comments/_right-main.html.haml
+++ b/app/views/comments/_right-main.html.haml
@@ -1,6 +1,6 @@
 .comments 
   - @comments.each do |comment|
-    .comment
+    .comment{data: {id: comment.id}}
       .comment__upper-info
         .comment__upper-info__talker
           = comment.user.name
